[project]
name = "energy-monitor-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriele Sorci", email = "gabrielesorci.25@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin (>=6.6.0,<7.0.0)",
    "websocket (>=0.2.1,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
